# cc-proxy

./: .env.example  .envrc  .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  WEBSEARCH_README.md  WEBSITE_IMPLEMENTATION_SUMMARY.md  cc-proxy.nix  default.nix  docker-compose.yml  flake.nix  providers.toml.example  pyproject.toml  requirements.txt  result  shell.nix  shell.nix.b  test_cancellation.py
docs/: anthropic-migration.md  deepseek.md  openrouter.md  search_api.md  transformers.md
examples/: anthropic-provider.toml  websearch-config.toml  websearch-usage.py
issues/: 001_openrouter-credits.md
openspec/: AGENTS.md  project.md
script/: cleanup_messages.py
src/: __init__.py  main.py
src/api/: endpoints.py  web_search.py  websocket_manager.py
src/assets/: app.js  config.html  proxy.js  styles.css
src/conversion/: request_converter.py  response_converter.py
src/conversion/transformer/: __init__.py  base.py  config.py  pipeline.py  registry.py
src/conversion/transformer/transformers/: __init__.py  deepseek.py  max_new_token.py  openrouter.py  qwen3.py  tooluse.py
src/core/: anthropic_client.py  client.py  client_factory.py  config.py  logging.py  model_manager.py
src/models/: claude.py  history.py
src/services/: history_manager.py
src/storage/: __init__.py  database.py
src/tools/: websearch.py
src/utils/: token_counter.py
src/websearch/: __init__.py  base.py  registry.py  response_formatter.py
src/websearch/providers/: __init__.py  bocha.py
tasks/: websearch.md
tests/: test_config.py  test_e2e_anthropic.py  test_integration_anthropic.py  test_provider_type.py  test_qwen3.py  test_transformer.py  test_websearch.py
