[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-proxy"
version = "1.0.0"
description = "Proxy server enabling Claude Code to work with OpenAI-compatible API providers"
readme = "README.md"
authors = [
    {name = "Claude Code Proxy", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "openai>=1.54.0",
    "anthropic>=0.34.0",
    "httpx[socks]>=0.28.1",
    "requests>=2.32.4",
    "aiosqlite>=0.21.0",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "pytest-asyncio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/holegots/claude-code-proxy"
Repository = "https://github.com/holegots/claude-code-proxy.git"
Issues = "https://github.com/holegots/claude-code-proxy/issues"

[project.scripts]

cc-proxy = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
